edit the href in main.html

--- a/public/main.html
+++ b/public/main.html
@@ -47,7 +47,7 @@
               <div><script src="FXcheck.js"></script></div>
 
               <strong><h3> Conversion Check</h3></strong>
-              <a href="/public/FX.html">FX Conversion</a>
+              <a href="/FX.html">FX Conversion</a>
         </div>
 
         <div class="Center">
